# pytryagain

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  justfile  noxfile.py  pyproject.toml  requirements.dev.txt
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  release.yml
src/pytryagain/: __init__.py  __version__.py  _retry.py  _sentinel.py  _types.py  _utils.py  _validators.py  backoff.py
tests/: conftest.py  test_backoff.py  test_retry.py  test_sentinel.py  test_utils.py
