[build-system]
requires = ["uv_build>=0.11.21,<0.12"]
build-backend = "uv_build"

[project]
name = "pytryagain"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []
readme = "README.md"

[dependency-groups]
typing = [
    "mypy>=2.1.0",
]
lint = [
    "ruff>=0.9",
]
test = [
    "pytest>=9",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "pytest-mock>=3",
]
dev = [
    { include-group = "typing" },
    { include-group = "lint" },
    { include-group = "test" },
]

[tool.uv]
default-groups = []

[tool.pytest]
testpaths = ["tests"]
addopts = [
    "-s",
    "-v",
    "--color=yes",
    "--cov=src",
    "--cov=tests",
    "--cov-report=html:coverage/htmlcov",
    "--cov-report=xml:coverage/coverage.xml",
    "--cov-report=term",
    "--cov-context=test",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
data_file = "coverage/.coverage"


[tool.coverage.report]
fail_under = 100
skip_covered = true

[tool.mypy]
mypy_path = "src"
strict = true
strict_bytes = true
strict_equality_for_none = true
pretty = true
extra_checks = true
warn_unreachable = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# select = ["E", "F", "I", "UP", "B", "C4", "PTH", "RUF"]
select = ["ALL"]
ignore = ["ANN", "ARG", "C90", "C901", "COM", "D", "E501", "PERF203", "PLR0913", "PYI034", "RET503", "S311"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["EM101", "FBT001", "PLR2004", "PT006", "PT011", "S101", "TRY003"]
