[build-system]
requires = ["uv_build>=0.11.21,<0.12"]
build-backend = "uv_build"

[project]
name = "pytryagain"
version = "0.1.3"
description = "A lightweight, zero-dependency retry decorator for sync and async Python functions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
license = "MIT"
authors = [{ name = "Eugene Liukin", email = "eugeneliukin.dev@gmail.com" }]
keywords = ["retry", "backoff", "decorator", "async", "resilience"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/eugeneliukindev/pytryagain"
Repository = "https://github.com/eugeneliukindev/pytryagain"
Issues = "https://github.com/eugeneliukindev/pytryagain/issues"

[dependency-groups]
lint = [
    "ruff>=0.9",
]
typecheck = [
    "mypy>=2.1.0",
]
tests = [
    "pytest>=9",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "pytest-mock>=3",
]
hooks = [
    "pre-commit>=4",
]
pkg-check = [
    "twine>=6",
    "check-wheel-contents>=0.6",
]
nox = [
    "nox>=2024.10",
]
dev = [
    { include-group = "lint" },
    { include-group = "typecheck" },
    { include-group = "tests" },
    { include-group = "hooks" },
    { include-group = "pkg-check" },
    { include-group = "nox" },
]

[tool.uv]
default-groups = []

[tool.pytest]
testpaths = ["tests"]
addopts = [
    "-s",
    "-v",
    "--color=yes",
    "--cov=src",
    "--cov=tests",
    "--cov-report=html:coverage/htmlcov",
    "--cov-report=xml:coverage/coverage.xml",
    "--cov-report=term",
    "--cov-context=test",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
data_file = "coverage/.coverage"


[tool.coverage.report]
fail_under = 100
skip_covered = true

[tool.mypy]
mypy_path = "src"
files = ["src"]
strict = true
strict_bytes = true
strict_equality_for_none = true
pretty = true
extra_checks = true
warn_unreachable = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# select = ["E", "F", "I", "UP", "B", "C4", "PTH", "RUF"]
select = ["ALL"]
ignore = ["ANN", "ARG", "C90", "C901", "COM", "D", "E501", "PERF203", "PLR0913", "PYI034", "RET503", "S311"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["EM101", "FBT001", "PLR2004", "PT006", "PT011", "S101", "TRY003"]
